--- a/chap4.tex
+++ b/chap4.tex
@@ -1,5 +1,9 @@
 \chapter{Evaluation}
 \label{chap:ch4_abbr}
-\section{Test case}
+\section{Test cases}
+\subsection{Checking available machines}
+\subsection{Reserving a machine}
+\subsection{Updating a machine}
+\subsection{filtering inventory}
 
 
