--- a/chap6.tex
+++ b/chap6.tex
@@ -1,4 +1,2 @@
-\chapter{Conclusions}
+\chapter{Conclusion and Discussion}
 \label{chap:conclusions}
-
-After several coding and debugging we have finally come to a conclusion.
