--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,7 @@
 \documentclass[dvips,letterpaper,12pt]{report}
 \usepackage{thesis}
 \usepackage{graphicx}
+\usepackage{float}
 
 \begin{document}
 
