--- a/chap1.tex
+++ b/chap1.tex
@@ -1,17 +1,18 @@
 \chapter{Introduction}
 
-The use of high performance computers for  research in the Faculty of Engineering  and Scientific is extensively increasing  every now and then, because large data processing and analysis is highly needed. As researcher demand mining and processing of large data, these computer systems and their properties  also need to be expanded to accommodate this large tasks. So as use of high performance computers increases, it becomes a cluster system, and becomes more complicated to manage, access and use them. Therefore we are faced with the issue of system management, system accessibility, and storage. These issues for example, are the inability to provide proper record of each computer system and their usage, the inability to provide flexible users access to the computers remotely and simultaneously, and also the problem of monitoring the number of computers that are reserved by users. As a result of these challenges it is highly necessary to develop software that solves these problems for Faculty of Engineering and Science. 
+The use of high performance computers for  research in the Faculty of Engineering  and Scientific has increase, because of increase in research tasks, such as testing new operating systems. As researchers demand large data storage and robust computer architectures, these computer systems and their properties  also need to be expanded to accommodate this large tasks. As we expand the systems access and usage  becomes more complicated to manage. Therefore we are faced with the issue of system management, system accessibility, and storage. These issues for example, are the inability to provide proper record of each computer system and their usage, the inability to provide flexible users access to the computers, and also the problem of monitoring the number of computers that are reserved by users. As a result of these challenges it is highly necessary to develop software that solves these problems for Faculty of Engineering and Science. 
 
 
-Clowder is a system designed to help the researcher manage the accessibility and usage of this cluster of high performance computer for research. Previous work has been started by researchers in Engineering department to complete these system for several years, since 2012. This system has been progressively useful, but yet there was more improvement yet to be made in order to complete it, as it lacking some necessary modern functionality and features, such as database system, interactive user interface  and automatic control protocols.  As an example, it takes extra effort and several shell command line statements to access  a computer in the cluster during research and in most cases this method is repeatedly performed manually. Another flaw about Clowder system is the fact that user access is limited since there is no proper user interface to access the machines from different location. Therefore the current state of Clowder is not sufficient enough to manage this computer cluster. So the main goal of this project is to develop software that addresses the issue of user accessibility, system management and automatic control protocol. Also to make sure that Clowder system becomes a completed software tool with a robust functionality that will provide all necessary features for better performance. 
+Clowder is a system designed to provide Preboot Execution Environment (PXE) for testing new operating systems through a Network File System (NFS) sever on the high performance computers. Previous work has been started by researchers in Engineering department to complete these system for several years, but yet there was more improvement yet to be made in order to complete it, as it lacks some necessary modern functionality and features, such as database system, interactive user interface  and restrictions.  As an example, it takes extra effort and manual command line statements to access  a computer in the cluster during research. Another reason for improvement is to provide flexible and dynamic user interface rather than current one (SSH). Therefore the current state of Clowder is not flexible and convenient enough. So the main goal of this project is to develop software that addresses the issue of user accessibility, system management and automatic control protocol. Addressing all these issues will improve the performance of Clowder in speed , access and robustness, and therefore making it a completed software tool. 
 	
 	
-There could be many other ways to design choices but we have accomplished this goal by using a design approach that provides a web interface, a databases system and a program that control all necessary protocols. The database system is designed to store and keep record of the computer systems and user activities. The web interface enable users to remotely log on to access  several machine from different locations simultaneously via a web page, and also provide user with the system inventory and other user activities. The main program contains the logic that manages the entire command protocol. This  software provide the ability to adding new computer system to the cluster, and to modify their properties individually. Also it provides the ability to make reservations: that is to allow user to reserve a computer for a certain period of time, and able to cancel reservations as well. Management is the key feature in developing this software, so we added a function to allow user search the inventory with some specifications according to there demands.   
+We have accomplished this goal by using a design approach that provides a web interface, a databases system and automatic command protocols. The database system is designed to store and keep record of the computer systems and user activities. The web interface enable users to remotely log on to several machine from different locations simultaneously via a web page, and also provide user with the system inventory and other user activities. This  software provide the ability to adding new computer system to the cluster, and to modify their properties individually. Also it provides the ability to make reservations: to allow users to reserve a computer for a certain period of time, and able to end reservations as well. A function to allow user search the inventory with some specifications according to their demands.   
 	
 
-As this software serves as a tool to manage the cluster of computers and user activities, it is important to know that user profile, reservations, computer details, network interface cards and disks are considered as the data. So all the computer system installed in the cluster with their names, vendors, memory size, architecture, and micro architecture is stored in the database. And same is applicable to the disks, network interface cards and any other devices that could be part of the cluster. Data is represented as variables in their various data types in the database scheme.  All these information stored in the database tables servers as input  data for the program and out put for the inventory. This database scheme allows user to add or update new machines installed in the cluster, and therefore provide dynamic access to the machines. 
+As this software serves as a tool to manage the cluster of computers and user activities, it is important to know that  reservations made, computer details, network interface cards and disks are stored as data. So all the computer system installed in the cluster with their names, vendors, memory size, architecture, and micro architecture is stored in the database. And same is applicable to the disks, network interface cards and any other devices that could be part of the cluster. Data is represented as variables in their various data types in the database scheme.  All these information stored in the database tables servers as input  data for the program and out put for the inventory. This database scheme allows user to add or update new machines installed in the cluster, and therefore provide dynamic access to the machines. 
 
-The web interface serves as a platform for users to interact with the system and overview other users activities via a web designated web page. This interface has also replaced the command line prompts which was the previous user interface for Clowder system. This choice of provides flexible access and control to the system, by allowing users to log on to the system and make request of the inventory at any time through the web server.
+The web interface serves as a platform for users to interact with the system and overview other users activities via a web designated web page. This interface has also replaced the command line prompts which was the previous user interface for Clowder system. This choice provides flexible access and control to the system, by allowing users to log on to the system and make request of the inventory at any time through the web server.
+
 
 	
 \label{chap:intro}
