--- a/thesis.tex
+++ b/thesis.tex
@@ -1,10 +1,40 @@
-\documentclass[dvips,letterpaper,12pt]{report}
+\documentclass[letterpaper,12pt]{report}
 \usepackage{thesis}
-\usepackage{graphicx}
-\usepackage{float}
-\usepackage{booktabs}
+\usepackage{adjustbox}
 \usepackage{listings}
-
+\usepackage{url}
+\usepackage{lipsum}
+\usepackage{tabu}
+\usepackage{algorithmic}
+\usepackage{amsfonts}
+\usepackage{tcolorbox}
+\usepackage{geometry}
+\usepackage{multirow}
+\geometry{%
+letterpaper, % a4paper
+left=   20 mm,
+right=  20 mm,
+top=    15 mm,
+bottom= 20 mm,}
+%\usepackage{setspace}
+%\doublespacing
+\usepackage{amsmath}
+\usepackage[T1]{fontenc}
+\usepackage{titlesec}
+% various other packages
+\titleformat{\chapter}
+  {\normalfont\Large\bfseries}{\thechapter}{.5em}{\vspace{.5ex}}[\titlerule]
+\titlespacing*{\chapter}      
+    {0pt}{0pt}{15pt}
+\usepackage{caption}
+\usepackage{amssymb}%
+\setcounter{MaxMatrixCols}{30}%
+\usepackage{graphicx}
+\usepackage{algorithm}
+%\usepackage{algpseudocode}
+\usepackage{pifont}
+\providecommand{\U}[1]{\protect\rule{.1in}{.1in}}
+%EndMSIPreambleData
 \begin{document}
 
 \pagenumbering{roman}
@@ -15,19 +45,17 @@
 %	{Complicated and Important-Sounding Thesis Title}
 %	{John P. Doe}
 %	{Master of Science}
-%	{Department of Scientific Computing}
-%	{April 2017}
+%	{Department of Computer Science}
+%	{May 2009}
 % The \thesistitle definition is in thesis.sty.  Other customizations
 % can be made there.
 \thesistitle
-	{Clowder: \\
-	 A Software system to manage the accessibility of \\
-high performance computers for research \\
-	 \footnotesize}
+{
+	 Clowder: A Software for Managing Cluster Of High Performance Computers  }
 	{\emph{Samson Ugwuodo}}
-	{Master of \emph{science}}
-	{Department of \emph{Scientific Computing}}		
-	{\emph{April 2017}}
+	{Master of \emph{Science}}
+	{ \emph{Scientific Computing} Program}
+	{\emph April 2017} 
 
 \include{abstract}
 \include{ack}
@@ -44,10 +72,5 @@ high performance computers for research \\
 \include{chap6}
 
 \include{bib}
-
-% If you have no appendices, remove the following two lines.
-% If you have more appdences, add them as necessary.
-\appendix
-\include{apdxa}
 
 \end{document}
