--- a/thesis.tex
+++ b/thesis.tex
@@ -10,6 +10,7 @@
 \usepackage{tcolorbox}
 \usepackage{geometry}
 \usepackage{multirow}
+\usepackage{float}
 \geometry{%
 letterpaper, % a4paper
 left=   20 mm,
@@ -69,6 +70,7 @@ bottom= 20 mm,}
 \include{chap3}
 \include{chap4}
 \include{chap5}
+
 \include{chap6}
 
 \include{bib}
