--- a/chap6.tex
+++ b/chap6.tex
@@ -1,2 +1,4 @@
-\chapter{Conclusion and Discussion}
+\chapter{Conclusion}
 \label{chap:conclusions}
+
+The need to complete the clowder system which was design to manage test machines has been accomplished by addressing the issues of system managemnt and accessibility. It was required to have a flexible user interface for dynamic accessibility, and a functional database system for storage and management. This issues has been resolved by designing a frontend and extended backend  software that provides the required functionality for the user interface and the database. We have created a web interface where users can communicate with the test by sending request via HTTP protocol. This web interface contains the required functionality for making reservations, updating machine details and viewing the inventory and generally resolve the issue of user accessibilty. Also, as part of the requirement to complete the Clowder system, we created a SQL database for storing and retrieving data. This database enables the clowder system to manage the access and users activity on the test machines by storing their details and recording all reservations made by users. The the database we have created has the ability to plug in a DHCP server which provides network between the Clowder and the test machines. All these factors has made is easier for researchers to run their test on the machines without conflict and lost of data. 
