--- a/chap2.tex
+++ b/chap2.tex
@@ -1,66 +1,13 @@
-\chapter{Design and Specifications}
+\chapter{Background}
 \label{chap:figtab}
 \label{chap}
-
-\section{Specifications}
-
- The objective of this software is to  a dynamic user interface and a functional database system. With regard to that, the specification is made up of necessary features and functionality that appear on the user interface. The following are the major specification of this software:
-\begin{description}
-\item[$\bullet$] Data Inventory
-\item[$\bullet$] Searching Inventory(SI)
-\item[$\bullet$] Make Reservations
-\item[$\bullet$] Cancel Reservations
-\item[$\bullet$] Add Data
-\item[$\bullet$] Update Data
-\end{description}
-Registered users have access to the system with unique user name, so the user interface provides a log in form on the web page where user can submit their details to be stored in the database. The user interface is able to list the inventory of data stored in the database in different categories. This is one of the main features of the user interface because it presents the content of the database. As there are data inventory on the user interface, it is necessary to have a function that allow users to search information from the inventory.  Another requirement of this software is the ability to make reservations: users are able to choose a machine from the inventory and reserve it for a fixed date and time. This requirement on the high level is meant to allow user to a specific machine for running a particular task on that machine without interruption. When a reservation made is expired, the machine that was reserved becomes free for other users. As new machines are added to the cluster, the Add-data functionality allows users to add details of those machines to the database and update the inventory. Likewise, when the user want to change a certain properties of the machines such as, memory size or disk, the Update-data functionality helps to perform this action.
-
-
-\section{Design}
-The main idea of the software is to solve the issue of user interface, and system management. So we have designed this software with the approach to provide functional solution to the specifications. The design structure comprises the various  segments and element of the user interface (front end) combined with the database (back end)  and the control protocols. Below is a figure that describe the main structure of the design in terms of operation:
-
-\begin{figure}[h]
-  \includegraphics[width=\linewidth]{Design-png-2.eps}
-  \label{fig:Design of program}
-  \caption{Design}
-\end{figure}
-
-We designed a web interface that provides  flexible and dynamic access to the system with interactive functionality. This web page contains inputs and output features. The reason for choosing a web page instead of other options is to provides online dynamic and simultaneous  access to the system rather than performing manual command prompts (example: checking the usage of machine, properties of machine, and status of machine on Unix interface). Another reason is to have a functional real time user interface that present the activities of the Clowder. The web server is responsible for serving the web page all the resources requested by the users, and it serves as a channel between the user and the database. We designed an operational (event recording and system referencing) database that address the issue of system management. The database stores data from the web page and also retrieves data on the web page via the server. As the user log on to the their account on the web page the server will pass this information to the  database which is controlled by the main program (command protocol). The command protocols is responsible for handling the user interface activities and executing the database queries.  
-
-\subsection{User Interface}
-The web interface represents the user interface (UI) where users get access to the system. It is part of the design that represents the front end of the software.The web interface elements controls the basic functionality for data input and out put. It represent each feature as mentioned in the specification. This web interface structure is designed using  HTML template as the front end and Go programming language as the back end. Below figure discribes the web interface avtivity;
-\begin{figure}[h!]
-\includegraphics[width=\linewidth, scale=0.4]{userinterface.eps}
-\label{fig:Web Interface Activity} 
-\caption{User Interface Description}
-\end{figure}
-\pagebreak
- The web interface contains all the necessary elements required to have dynamic and flexible access to the system. These elements includes:
-\begin{description}
-  \item[$\bullet$] Forms
-  \item[$\bullet$] Input controls
-\end{description}
-\subsection*{Forms}
- Forms are one the elements that provides the ability to input data to the database.The data is submitted through a HTML post request \cite{WinNT}. The post forms are used for submitting data such as machines and reservations details. The form is designed with elements which includes; id and name attributes for identifying data, text fields for collecting data, select menus for selecting data options and submit button for submitting the data. When data is submitted with HTML form, the Go HTTP framework in the web server call the Go function handler to process and parse this data to the database.  After the data (example: a database query) is processed, the Go program generates an HTML page (such as machines inventory), which the server returns to the web interface. In this system design, the forms are used for creating new machines, disks, NICs and making reservation. 
-\subsection*{Input Controls}
-The input control in this web interface provides the necessary components that supports the functionality of the software. There is array of HTML input control, but we have chosen a few that satisfy our specifications. These input controls includes text field, buttons, date fields, drop down list and list box. They are used for both input and output functions like listing the inventory, inserting texts, to update data, to send queries, viewing selection options and searching inventory. These controls are designed with HTML tags and HTML template.
-\subsection{Server}
-The server is responsible for parsing all request from the web interface to the database and command protocol. When request is made on the web interface (for instance available machine on database), the server calls the  specific function of command protocol to handle this request by providing the necessary resources. Likewise the server interchange communication between the user interface and the database system for executions and requests. 
-\begin{figure}[h!]
-\includegraphics[width = \linewidth]{Server.eps}
-\label{fig:Description of Server Activity} 
-\caption{Server Activity Description}
-\end{figure}
-\subsection{Database}
-The database is another major component of this system, because it is provides storage and resource for the system. The data includes reservation records, machine details, disks, and NICs information. The database is designed with SQLite model using Go programming language as the back end tech. SQlite was used here because its a fast open source SQL engine. We created a functional database system that suites the specification of the software. 
-The database scheme contains tables of machines, user record, reservation, NICs (network interface cards) and disks.  One of the function of the software is the ability to make reservations.  Below show a typical model of the database design.
- \begin{figure}[h!]
-\includegraphics[width = \linewidth]{Database.eps}
-\label{fig:Database Schema} 
-\caption{Database design}
-\end{figure}
-\subsection{Data flow and  protocols}
-The data flows from the user interface via the server to the database. We used Go HTTP handler to process data recieved from the HTML form to be stored in the database. The client server initiate each method (function) when the HTTP handler sends a request. For example, when users search for list of information such as machines details, the request is sent through the server as a query, and the specific Go fuction is called to fetch the data from the disegnated database. This process is the protocol that control the sequence of data flow in the system. It controls data input, handling and output. This protocol improves data circulation in the system and provides automatic  command rather than manual query routin perfomed on commad line. 
+\section*{Clowder}
+Clowder software system is made up of various components, and some of this components has been worked on by researchers in the department. The main goal of this project is to complete the Clowder system by developing the remaining components, which are to solve the issue of user accessibility and system management. Generally Clowder has been designed to manage access of cluster of test machines, maily for testing new operating systems. But as this requires a flixible user interface and database to complete this components, we have designe a dynamic user inter and functioning database to accomplished this need. The background components of Clowder system inlcudes  a  DHCP server with Preboot Execution Environment (PXE)  that allow the test machines to be boot up remotly by users for testing. The test machines do a PXE boot and uses the DHCP to get IP then request for files. 
+Generaly a PXE is defined on a foundation of industry standard Internet protocols and services that are widely deployed using DHCP. This process forms an interactions between clients and servers. To ensure that the meaning of the client-server interaction is standardized as well, certain vendor option fields in DHCP protocol are used, which are allowed by the DHCP standard. The operations of standard DHCP servers that serve up IP addresses will not be disrupted by the use of the extended protocol \cite{PXE}.
+The client initiates the protocol by broadcasting a DHCPDISCOVER containing an extension that identifies the request as coming from a client that implements the PXE protocol. The client then discovers a Boot Server of the type selected and receives the name of an executable file on the chosen Boot Server 
+ \cite{PXE}. These files are managed with a Network File System (NFS), which allow users to access files across networks. This processes serves as the main function of Clowder system as a testing tool, so the rest is the part which we have designed to complete this system as a full functional software tool for research.
+ 
+ In the design of some frontend functionality extended to backend, we used an SQL JOIN query for combination of diffirent database tables where our algorithms requires to merge multiple data for some query request. 
 
 
 
