--- a/thesis.sty
+++ b/thesis.sty
@@ -84,9 +84,9 @@ by \\
 
 \vspace{\fill}
 
-A thesis submitted to the \\
+A Project Report submitted to the \\
 School of Graduate Studies \\
-in partial fulfilment of the \\
+in partial fulfillment of the \\
 requirements for the degree of \\
 #3 \\
 
